--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "dependencies": {
+    "@loaders.gl/shapefile": "^4.2.2",
     "deck.gl": "^9.0.23",
     "mapbox-gl": "^3.1.2",
-    "osmtogeojson": "^3.0.0-beta.5"
+    "osmtogeojson": "^3.0.0-beta.5",
+    "proj4": "^2.11.0",
+    "shpjs": "^6.1.0"
   }
 }
