--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@loaders.gl/shapefile": "^4.2.2",
+    "@turf/turf": "^7.0.0",
     "deck.gl": "^9.0.23",
     "mapbox-gl": "^3.1.2",
     "osmtogeojson": "^3.0.0-beta.5",
