--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@turf/turf": "^7.1.0",
     "deck.gl": "^9.0.23",
     "mapbox-gl": "^3.1.2",
     "osmtogeojson": "^3.0.0-beta.5"
